# smFISH-sqi

./: .gitignore  README.md  pyproject.toml
scripts/: detect_spots_from_zarr.py  estimate_nucleus_diameter.py  napari_check_nuclei.py  napari_check_rings_and_spots.py  run_auc_comparison.bat  run_auc_comparison.py  run_batch_fovs.bat  run_batch_fovs.py  run_nuclei_seg.py  run_spots.py  run_sqi_from_fov_zarr.py  run_sqi_qc1.py  test_mosaic_orientation.py
scripts/deprecated/: run_sqi.py
segmentation/: cellpose_backend.py
sqi/io/: image_io.py
sqi/qc/: Untitled  metrics.py  mosaic_coords.py  qc_plots.py  rings.py  sensitivity.py  valid_mask_mosaic.py
sqi/spatial/: nulls.py
sqi/spot_features/: quality.py
tests/: 1.py
