[project]
name = "merfish-sqi"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "matplotlib",
  "tifffile",
  "zarr",
  "cellpose",
  "spotiflow",
  "pandas",
  "pyarrow",
]

# NOTE: torch/torchvision/torchaudio are NOT listed above to avoid
# pip pulling CPU-only versions that conflict with CUDA conda packages.
# After `pip install -e .`, install GPU PyTorch with:
#   conda install pytorch torchvision torchaudio pytorch-cuda=12.1 -c pytorch -c nvidia --solver=libmamba

[tool.setuptools]
packages = [
  "sqi",
  "sqi.io",
  "sqi.qc",
  "sqi.spatial",
  "sqi.spot_calling",
  "sqi.spot_features",
  "segmentation",
]
