[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merfish-sqi"
version = "0.1.0"
requires-python = ">=3.9"
description = "Sample Quality Index (SQI) for smFISH spatial transcriptomics"
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "matplotlib",
  "tifffile",
  "zarr",
  "dask[array]",
  "tqdm",
  "cellpose",
  "spotiflow",
  "pandas",
  "pyarrow",
]

[project.urls]
Homepage = "https://github.com/LilianHeGao/merfish-sqi"
Repository = "https://github.com/LilianHeGao/merfish-sqi"

[project.optional-dependencies]
napari = ["napari"]

# NOTE: torch/torchvision/torchaudio are NOT listed above to avoid
# pip pulling CPU-only versions that conflict with CUDA conda packages.
# After `pip install -e .`, install GPU PyTorch with:
#   conda install pytorch torchvision torchaudio pytorch-cuda=12.1 -c pytorch -c nvidia --solver=libmamba

[tool.setuptools]
packages = [
  "sqi",
  "sqi.io",
  "sqi.qc",
  "sqi.spatial",
  "sqi.spot_calling",
  "sqi.spot_features",
  "segmentation",
]
